syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
package zzq.interfaces.grpc;

message Product {
  int64 id = 1;
  string name = 2;
  int32 num = 3;
  string style = 4;
  string provider = 5;
}

message AddProductRequest {
  Product product = 1;
}

message GetProductRequest {
  int64 id = 1;
  string name = 2;
}

message GetProductResponse {
  Product product = 1;
}
message UpdateProductCountRequest {
  int64 id = 1;
  int32 quantity = 2;
}

service ProductService {
  rpc AddProduct(AddProductRequest) returns (google.protobuf.Empty);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProductCount(UpdateProductCountRequest) returns (google.protobuf.Empty);
}
